<resources>
    <string name="app_name">SignUpForm</string>
    <string name="create_an_account">Create An Account</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="sign_up">Sign Up</string>
    <string name="nameString">Name</string>
    <string name="emailString">Email</string>
    <string name="pass1">********</string>
    <string name="pass2">********</string>
</resources>
